--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,9 @@ footer {
     list-style-type: none;
     text-align: center;
 
-
+}
+.nav-down-li:hover{
+    color: white;
 }
 
 .desktop-nav {
@@ -170,12 +172,18 @@ li {
 .header-menu-li {
     font-size: 10px;
     padding: 10px 10px;
+    color: #585b61;
+}
+
+.header-menu-li:hover {
+    color: white;
 }
 
 .shadow {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
 
 }
 
@@ -193,7 +201,7 @@ button {
 /* <!-- regole menu musica hover--> */
 .first-row-col {
 
-    
+
     position: relative;
 }
 
@@ -203,7 +211,7 @@ button {
     visibility: hidden;
     position: absolute;
     bottom: 100px;
-  left: 45px;
+    left: 45px;
 
 }
 
@@ -211,22 +219,25 @@ button {
     visibility: visible;
     position: absolute;
 }
-.second-of-first-row-col{
+
+.second-of-first-row-col {
     position: relative;
 }
-.second-of-first-row-col:hover .hover-play{
+
+.second-of-first-row-col:hover .hover-play {
     visibility: visible;
     position: absolute;
     bottom: 60px;
     left: 35px;
 }
 
-.second-row-col{
-   
+.second-row-col {
+
     position: relative;
 }
+
 .second-row-col:hover .hover-play {
-   
+
     visibility: visible;
     position: absolute;
     bottom: 60px;
@@ -349,13 +360,21 @@ h1 {
 
 .fa-heart {
     position: absolute;
+    top: 5px;
     left: 35px;
+    font-size:10px ;
 }
-
+.fa-heart:hover{
+    font-size: 15px;
+}
 .fa-folder {
     position: absolute;
-    top: 20px;
+    
     left: 35px;
+    font-size: 10px;
+}
+.fa-folder:hover{
+    font-size: 15px;
 }
 
 /* <!-- regole center row --> */
@@ -374,22 +393,35 @@ h1 {
 .fa-code-compare {
     padding: 10px 10px;
 }
-
+.fa-code-compare:hover{
+    font-size: 25px;
+}
 .fa-backward-step {
     padding: 10px 10px;
 }
-
+.fa-backward-step:hover{
+    font-size: 25px; 
+}
 .fa-circle-play {
     font-size: 30px;
     padding: 10px 10px;
+}
+.fa-circle-play:hover{
+    font-size: 35px;
 }
 
 .fa-forward-step {
     padding: 10px 10px;
 }
+.fa-forward-step:hover{
+    font-size: 25px; 
+}
 
 .fa-arrow-rotate-righ {
     padding: 10px 10px;
+}
+.fa-arrow-rotate-right:hover{
+    font-size: 25px; 
 }
 
 /* <!-- regole right row --> */
@@ -400,6 +432,7 @@ h1 {
 
 }
 
+
 .col-right {
     height: 5px;
     width: 60px;
@@ -409,6 +442,7 @@ h1 {
 }
 
 .fonts-row {
+    width: 50px;
     position: relative;
 
 
@@ -417,6 +451,15 @@ h1 {
 .fa-display {
     padding: 0 10px;
 }
+.fa-list:hover{
+    font-size: 25px; 
+}
+.fa-display:hover{
+    font-size: 25px;
+}
+.fa-volume-high:hover{
+    font-size: 25px;
+}
 
 
 
@@ -424,6 +467,9 @@ h1 {
 @media screen and (min-width:420px) {
 
     /* <!-- regole navigatore desktop --> */
+   main{
+    max-width: 1440px;
+   }
     .smart-nav {
         display: none;
     }
@@ -515,7 +561,7 @@ h1 {
 
     .fa-folder {
         position: absolute;
-        top: 15px;
+        top: 20px;
     }
 
 
