--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
-    ;
+    
 }
 
 .container {
@@ -19,7 +19,7 @@ body {
 
 nav {
     width: 50px;
-    height: 100%;
+    height: calc(100vh - 80px);
     background-color: #000000;
     color: #646464;
 }
@@ -44,16 +44,16 @@ footer {
     width: 90%;
     margin: 0 auto;
     height: 100%;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
-.up-nav {
-    height: 50%;
-}
+
 
 .up-nav-list {
-    height: 200px;
+   
     text-align: center;
     list-style-type: none;
 }
@@ -63,8 +63,8 @@ footer {
 }
 
 .nav-down-list {
-    height: 400px;
-    padding-top: 260px;
+   
+   
     list-style-type: none;
     text-align: center;
 
@@ -114,9 +114,18 @@ li {
 }
 
 /* <!-- navigatore desktop --> */
+.desktop-nav{
+    width: 90%;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .nav-desktop-list {
     list-style-type: none;
-
+overflow:scroll;
 
 }
 
@@ -151,6 +160,11 @@ li {
     margin-right: 20px;
     color: white;
 }
+.home-img{
+    border-left: green solid 2px;
+    padding-left: 2PX;
+   
+}
 
 /* regole music menu */
 .shadow {
@@ -178,6 +192,11 @@ li {
 .header-menu-li:hover {
     color: white;
 }
+#header-menu-li-1{
+ 
+    border-bottom: green solid 2px ;
+  
+}
 
 .shadow {
     display: flex;
@@ -199,25 +218,24 @@ button {
 }
 
 /* <!-- regole menu musica hover--> */
-.first-row-col {
 
-
+.first-row-col{
     position: relative;
 }
-
-.hover-play {
-    width: 50%;
-    margin: 0 auto;
+.hover-play {  
+    width: 120px; 
     visibility: hidden;
     position: absolute;
-    bottom: 100px;
-    left: 45px;
+    
 
 }
 
 .first-row-col:hover .hover-play {
+    width: 120px;
     visibility: visible;
     position: absolute;
+    top: 50px;
+    left: 50px;
 }
 
 .second-of-first-row-col {
@@ -468,15 +486,17 @@ h1 {
 
     /* <!-- regole navigatore desktop --> */
    main{
-    max-width: 1440px;
+    max-width: 440px;
    }
     .smart-nav {
         display: none;
     }
 
     .desktop-nav {
-        display: block;
+        display: flex;
+        flex-direction: column;
         width: 90%;
+        height: 100%;
         margin: 0 auto;
 
 
@@ -493,10 +513,7 @@ h1 {
         width: 80px;
     }
 
-    .nav-center {
-        margin-top: 40px;
-        margin-bottom: 220px;
-    }
+   
 
     /* regole nav down */
 
@@ -508,6 +525,9 @@ h1 {
 
 /* regloe tablet */
 @media all and (min-width:780px) {
+    main{
+        max-width: 1080px;
+       }
 
     /* <!-- prima riga menu musica --> */
     .second-of-first-row {
@@ -569,6 +589,9 @@ h1 {
 
 /* regloe deskto */
 @media all and (min-width:1280px) {
+    main{
+        max-width: 1440px;
+       }
 
     /* <!-- prima riga menu musica --> */
     .container-first-row {
@@ -585,15 +608,17 @@ h1 {
     }
 
     .second-of-first-row {
-        width: 50%;
+        width: 53%;
         justify-content: space-around;
-
+        
+          
+       
     }
 
     .first-row-img {
-        width: 200px;
+        width: 160px;
     }
-
+    
     /* <!-- seconda riga menu musica --> */
     .second-row {
         width: 100%;
@@ -615,7 +640,7 @@ h1 {
     }
 
     .img-row-3 {
-        width: 200px;
+        width: 160px;
         border-radius: 50%;
     }
 
